--- a/FLOYD_VIDEO.html
+++ b/FLOYD_VIDEO.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <video autoplay loop muted id="video">
-        <source src="https://drive.google.com/file/d/1ITaimDCOF7U2s49qpJLkFtu1Qe7tr-Ml" type="video/mp4">
+        <source src="https://drive.google.com/file/d/1ITaimDCOF7U2s49qpJLkFtu1Qe7tr-Ml/view?usp=sharing" type="video/mp4">
         Dein Browser unterstützt das Video-Tag nicht.
     </video>
 
